# Assembler

./: .gitignore  CMakeLists.txt  Makefile  asm  bee_gees.s  compile.sh  test  test.s
asm.dSYM/Contents/Resources/DWARF/: asm
asm/include/: asm.h  op_struct.h
asm/source/: assembler.c  disassembler.c  main.c  op.c  parse.c  util.c
include/: asm.h  asm_errors.h  lexer.h  op.h  op_struct.h  vm.h  vm_struct.h
libft/: Makefile
libft/inc/: bitwise.h  conv.h  error.h  ft_printf.h  ft_regex.h  hash_map.h  io.h  logger.h  math.h  mem.h  str.h  system.h  util.h
libft/src/bitwise/: hasbyte.c  mask.c  operations.c  shift.c
libft/src/conv/: ft_atol.c  ft_uitoa_dec.c  ft_uitoa_hex.c  ft_ultoa_base.c  ft_ultoa_hex.c
libft/src/hash_map/: hash_map_destroy.c  hash_map_get.c
libft/src/io/ft_printf/: buffered_printer.c  float_processing.c  ft_printf_.c  ft_printf_.h  ft_printf_alias.c  get_format_arg.c  number_processing.c
libft/src/list/: list_pop.c
libft/src/logger/: logger.c  logger_.h  logger_appenders.c  logger_config.c  logger_log.c  logger_log_alias.c
libft/src/math/: abs.c  divmod.c  max.c  min.c  moddiv.c  numlen.c  pow.c  sqrt.c
libft/src/mem/: memswap.c
libft/src/regex/: o_regex.c  o_regex_compile.c  regex.c  regex_compile.c
libft/src/string/: ft_concat.c  ft_isdigit.c  ft_strany.c  ft_strend.c  ft_strrev.c  ft_strstart.c  ft_wstrlen.c
libft/src/system/: byte_swap_signed.c  byte_swap_unsigned.c  endian.c  ft_path.c
libft/src/util/: ft_exit.c
source/: .gitignore  main.c
source/assembler/: asm.c  big_endian_realisation.c  debug.c  find_cmd.c  free.c  labeler.c  labelfind.c  labels.c  lex.c  lib.c  live.c  parse.c  parse_clear_line.c  parse_mark.c  parse_name_comment.c  parse_operation.c  translation_bytecode.c  util.c
source/common/: ft_isdigit.c  ft_strtrim.c
source/disassembler/: disassm.c
source/minitest/: Makefile  debug.c  find_cmd.c  labeler.c  labels.c  lex.c  lexer.h  lib.c  live.c  main.c  minitest
source/minitest/command/: command.h  utils.c
source/minitest/command/minitest.dSYM/Contents/Resources/DWARF/: minitest
source/minitest/minitest.dSYM/Contents/: Info.plist
source/minitest/minitest.dSYM/Contents/Resources/DWARF/: minitest
source/minitest2/: main.c
source/minitest2/includes/: lexer.h
source/minitest2/source/: labelfind.c  labels.c
source/op/: op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  util.c
source/vm/: vm_champion_load.c  vm_champion_read.c  vm_check.c  vm_cursor.c  vm_eval.c  vm_exec.c  vm_options.c  vm_options_logger.c  vm_print.c  vm_run.c  vm_util.c  vm_verbose.c
test.dSYM/Contents/Resources/DWARF/: test
tests/asm/error/: four_arg_malloc_free_pointer_error.s
tests/asm/valid/: 42.s  Survivor.s  gedeon.cor  gedeon.s
